IKC-309 List available schemas